RESOLVED FIXED73850
[Qt][WK2] Frame is not being showed in the screen when frameLoadCompleted is called
https://bugs.webkit.org/show_bug.cgi?id=73850
Summary [Qt][WK2] Frame is not being showed in the screen when frameLoadCompleted is ...
Igor Trindade Oliveira
Reported 2011-12-05 12:11:14 PST
Frame is not being showed in the screen when frameLoadCompleted is called.
Attachments
Patch (2.20 KB, patch)
2011-12-05 12:23 PST, Igor Trindade Oliveira
noam: review-
noam: commit-queue-
Patch (2.11 KB, patch)
2011-12-05 12:46 PST, Igor Trindade Oliveira
no flags
Igor Trindade Oliveira
Comment 1 2011-12-05 12:23:04 PST
Created attachment 117913 [details] Patch Proposed patch.
Noam Rosenthal
Comment 2 2011-12-05 12:30:38 PST
Comment on attachment 117913 [details] Patch I believe that this should be fixed inside LayerTreeHostQt and not in WebFrameLoaderClient.
Igor Trindade Oliveira
Comment 3 2011-12-05 12:46:39 PST
Created attachment 117924 [details] Patch Proposed patch.
WebKit Review Bot
Comment 4 2011-12-05 20:07:21 PST
Comment on attachment 117924 [details] Patch Clearing flags on attachment: 117924 Committed r102087: <http://trac.webkit.org/changeset/102087>
WebKit Review Bot
Comment 5 2011-12-05 20:07:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.