[Qt][WK2] Frame is not being showed in the screen when frameLoadCompleted is called https://bugs.webkit.org/show_bug.cgi?id=73850

WebKit2 has a mechanism to prevent  the composited layer tree of the outgoing page
from being torn down or updated until the incoming page has layout. However, for simple
pages, when the frame is loaded the page is not rendered in the screen.

This patch fixes this bug calling LayerTreeHostQt::scheduleLayerFlush when m_layerFlushSchedulingEnabled
is true.

Reviewed by Noam Rosenthal.

* WebProcess/WebPage/qt/LayerTreeHostQt.cpp:
(WebKit::LayerTreeHostQt::setLayerFlushSchedulingEnabled):


Canonical link: https://commits.webkit.org/90535@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102087 268f45cc-cd09-0410-ab3c-d52691b4dbfc